Select a better fallback native display mode if no preferred mode is available

If the display preferred mode is not supported, it will be filtered out, and
then Chrome will pick up the first mode in the list which is likely to be
the highest resolution mode.

We should first try to find a mode with an equal size to the active pixels
size in the first detailed timing descriptor. If that fails too, then we can
default to the first highest resolution.

BUG=795123

Change-Id: Ibd81fdd4c86234a5d5bf6e78e55645c3419626d6